--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL= 'postgresql://likebingo_user:p29i89uwNM2rVd43WGu459JUntRlXPwN@dpg-d05m0smuk2gs73cjog2g-a.oregon-postgres.render.com/likebingo'
+# DATABASE_URL= "postgresql://myuser:mypassword@143.198.100.55:5432/like_bingo"
+# DATABASE_URL = "postgresql+psycopg2://myuser:mypassword@localhost/like_bingo"
+# DATABASE_URL = "postgresql://myuser:mypassword@91.99.95.216:5432/like_bingo"
+DATABASE_URL = "postgresql://myuser:mypassword@91.99.95.216:5432/like_bingo"
+
